# CyberHandsFaraz

./: README.md
3D-Model/: CHUGV_013_RENDER.mtl
ROS/chugv_ws/devel/: .catkin  .rosinstall  setup.sh
ROS/chugv_ws/devel/lib/chugv_navigation/: make_plan_node  send_goals_node
ROS/chugv_ws/devel/lib/chugv_random_walk/: random_walk_node
ROS/chugv_ws/devel/lib/pkgconfig/: chugv_control.pc  chugv_description.pc  chugv_gazebo.pc  chugv_navigation.pc  chugv_random_walk.pc  simple_navigation_goals.pc
ROS/chugv_ws/devel/lib/simple_navigation_goals/: simple_navigation_goals
ROS/chugv_ws/src/chugv_control/: CMakeLists.txt  CMakeLists.txt~  package.xml~
ROS/chugv_ws/src/chugv_control/config/: joint_position_control.yaml
ROS/chugv_ws/src/chugv_control/plugin/: CMakeLists.txt  robot_0_plugin.cc
ROS/chugv_ws/src/chugv_control/scripts/: joy_teleop.py  joy_teleop.py~  key_teleop.py
ROS/chugv_ws/src/chugv_description/: CMakeLists.txt  package.xml
ROS/chugv_ws/src/chugv_description/launch/: chugv_rviz.launch~  hokuyo.launch
ROS/chugv_ws/src/chugv_description/meshes/: chugv.dae  chugv_coll.dae
ROS/chugv_ws/src/chugv_description/stage/: chugv_stage.world  chugv_stage.world~
ROS/chugv_ws/src/chugv_description/urdf/: chugv.urdf.xacro  chugv.urdf.xacro~  (+1 more)
ROS/chugv_ws/src/chugv_gazebo/: CMakeLists.txt
ROS/chugv_ws/src/chugv_navigation/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  single_robot.rviz
ROS/chugv_ws/src/chugv_random_walk/: CMakeLists.txt  CMakeLists.txt~
ROS/chugv_ws/src/simple_navigation_goals/: CMakeLists.txt~  package.xml
(+77 files in other folders)
